[tool.poetry]
name = "facilitate"
version = "0.0.1"
description = ""
authors = ["Maksim Kalmykov <m.n.kalmykov@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
halo = "^0.0.30"
boto3 = "^1.14.47"
PyInquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.6.0"
mypy = "^0.782"
isort = "^5.4.2"
pytest = "^6.0.1"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
